--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "npm run typings && react-scripts start",
     "build": "npm run typings && react-scripts build && npm run copy-404",
-    "copy-404": "cp build/public/index.html build/public/404.html",
+    "copy-404": "cp build/index.html build/404.html",
     "typings": "open-rpc-typings -d src/openrpc.json --output-ts src/__GENERATED_TYPES__/",
     "lint": "eslint --fix src/ ",
     "test": "npm run typings && npm run lint && react-scripts test --coverage --passWithNoTests"
